force-app/main/default/objects/ULab_Order_Status_KPI__c/ULab_Order_Status_KPI__c.object-meta.xml
<CustomObject>
    <description>Tracks KPI for various status fields.</description>
    <label>ULab Order Status KPI</label>
    <nameField>
        <displayFormat>SKPI-{0000}</displayFormat>
        <label>ULab Order Status KPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ULab Order Status KPI</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>