force-app/main/default/objects/ULab_Order_Status_KPI__c/fields/Assigned_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User_Name__c</fullName>
    <formula>Assigned_User__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned User Name</label>
    <type>Text</type>
</CustomField>