force-app/main/default/objects/ULab_Order_Status_KPI__c/fields/New_Status_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Status_Entry_Date__c</fullName>
    <label>New Status Entry Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>