force-app/main/default/objects/ULab_Order_Status_KPI__c/fields/Previous_Status_Entry_Time__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status_Entry_Time__c</fullName>
    <label>Previous_Status_Entry_Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>