force-app/main/default/objects/ULab_Order_Status_KPI__c/fields/Time_Taken_In_Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken_In_Previous_Status__c</fullName>
    <formula>(New_Status_Entry_Date__c -  Previous_Status_Entry_Time__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Taken In Previous Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>