force-app/main/default/objects/ULab_Order_Status_KPI__c/fields/uLab_Order__c.field-meta.xml
<CustomField>
    <fullName>uLab_Order__c</fullName>
    <label>uLab Order</label>
    <referenceTo>uLab_Order__c</referenceTo>
    <relationshipLabel>ULab Order Status KPI</relationshipLabel>
    <relationshipName>ULab_Order_Status_KPI</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>