force-app/main/default/objects/ULab_Order_Status_KPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>uLab_Order__c</columns>
    <columns>New_Status__c</columns>
    <columns>Previous_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>