force-app/main/default/objects/ULab_Order_Status_KPI__c/listViews/view_status_changes_of_a_order.listView-meta.xml
<ListView>
    <fullName>view_status_changes_of_a_order</fullName>
    <columns>NAME</columns>
    <columns>uLab_Order__c</columns>
    <columns>New_Status__c</columns>
    <columns>Previous_Status__c</columns>
    <columns>New_Status_Entry_Date__c</columns>
    <columns>Previous_Status_Entry_Time__c</columns>
    <columns>Assigned_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>uLab_Order__c</field>
        <operation>equals</operation>
        <value>76241D</value>
    </filters>
    <label>view status changes of a order</label>
</ListView>